# oop-labs

mai_oop_lab_1_7/: CMakeLists.txt
mai_oop_lab_1_7/.devcontainer/: Dockerfile  devcontainer.json
mai_oop_lab_1_7/src/: breakChocolate.cpp  breakChocolate.h  main.cpp
mai_oop_lab_1_7/tests/: breakChocolateTests.cpp
mai_oop_lab_2_13/: CMakeLists.txt
mai_oop_lab_2_13/src/: binary.cpp  binary.h
mai_oop_lab_2_13/tests/: tests.cpp
mai_oop_lab_3_18/: CmakeLists.txt
mai_oop_lab_3_18/include/: square.h
mai_oop_lab_3_18/src/: figure_array.cpp  main.cpp  square.cpp
mai_oop_lab_3_18/tests/: test_figures.cpp
mai_oop_lab_4_32/: CMakeLists.txt  main.cpp  tests.cpp
mai_oop_lab_4_32/include/: array.h  figure.h  octagon.h  point.h  square.h  triangle.h
mai_oop_lab_5_2/: CMakeLists.txt
mai_oop_lab_5_2/include/: my_memory_resource.hpp  my_stack.hpp  person.hpp
mai_oop_lab_5_2/src/: main.cpp
mai_oop_lab_6_17/: CMakeLists.txt
mai_oop_lab_6_17/include/combat/: CombatVisitor.h
mai_oop_lab_6_17/include/location/: Location.h  NPC.h
mai_oop_lab_6_17/include/observer/: Observer.h
mai_oop_lab_6_17/src/: main.cpp
mai_oop_lab_6_17/src/combat/: CombatVisitor.cpp
mai_oop_lab_6_17/src/factory/: NPCFactory.cpp
mai_oop_lab_6_17/src/location/: Location.cpp
mai_oop_lab_6_17/tests/: tests.cpp
mai_oop_lab_7_17/: CMakeLists.txt
mai_oop_lab_7_17/include/combat/: CombatVisitor.h
mai_oop_lab_7_17/include/factory/: NPCFactory.h
mai_oop_lab_7_17/include/location/: Location.h  NPC.h
mai_oop_lab_7_17/src/: main.cpp
mai_oop_lab_7_17/src/combat/: CombatVisitor.cpp
mai_oop_lab_7_17/src/location/: Location.cpp
mai_oop_lab_7_17/src/observer/: Observer.cpp
mai_oop_lab_7_17/tests/: tests.cpp
